# haskell-type-classes-wwshjts

./: README.md  stack.yaml  test.cabal
.github/workflows/: classroom.yml  test.yml
src/: Example.hs  Task1.hs  Task2.hs  Task3.hs
test/: ExampleSuite.hs  Runner.hs  Task1Suite.hs  Task2Suite.hs  Task3Suite.hs
