cabal-version: 3.0
name:          test
version:       0.1.0.0

library
  exposed-modules:
      Task1
    , Task2
    , Task3
  hs-source-dirs: src
  ghc-options: -Werror -Wall
  build-depends: base >=4.7 && <5
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Runner.hs
  hs-source-dirs: test
  other-modules:
      Task1Suite
    , Task2Suite
    , Task3Suite
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wno-missing-export-lists -Wno-missing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , test
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , tasty-smallcheck
    , containers
  default-language: Haskell2010
